dctrl2xml (0.7) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Thu,  1 Mar 2007 17:38:41 +0100

dctrl2xml (0.6) unstable; urgency=low

  * scripts/dctrl2xml:
    - Now parses also debtags. Facets and tags are both elements and tags are
      always empty. Colons in tags are replaced with a hyphen.
    - Removed the second level <package> element which was a duplicate of
      the <name> element.
  * doc/dctrl2xml.xml: Added an example which pipes dctrl2xml's output to
    xmllint to reformat and reindent the XML to make it easier to read.
  * debian/control: Added homepage field to long description.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Thu,  1 Mar 2007 17:28:21 +0100

dctrl2xml (0.5) unstable; urgency=low

  * scripts/dctrl2xml: Use /usr/bin/python instead of /usr/bin/python2.3 as
    interpreter. However, 2.3 remains the minimum required Python version.
  * Updated packaging to the new Python policy using python-support.
  * Bumped Standards-Version from 3.6.2 to 3.7.2, no changes required.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat, 23 Sep 2006 17:55:13 +0200

dctrl2xml (0.4) unstable; urgency=low

  * Added example XSL stylesheets for converting dctrl2xml's XML output to
    XHTML. Thanks to Antonio Ospite <ospite@studenti.unina.it> for providing
    these stylesheets.
  * Remove full stops from blank lines in the long description of a package.
  * debian/control.in:
    - Added docbook-xml to Build-Depends to make docbook2x-man happy.
    - Bumped Standards-Version from 3.6.1 to 3.6.2, no changes required.
  * debian/rules:
    - Don't autogenerate debian/control at build-time with CDBS.
  * Updated postal address of the Free Software Foundation (FSF).

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat, 10 Sep 2005 02:37:39 +0200

dctrl2xml (0.3) unstable; urgency=low

  * Rewrote parts of the Debian control parser and switched from xml.dom to